ENG-1630 feat(1ui): create dropdown menu component (#73)
- create dropdown menu component
- add checkmark icon

--- a/packages/1ui/src/components/Command/Command.mdx
+++ b/packages/1ui/src/components/Command/Command.mdx
@@ -1,3 +1,4 @@
+import { Button } from '@components'
 import { Canvas, Controls, Meta, Source, Title } from '@storybook/blocks'
 
 import * as Stories from './Command.stories'
@@ -8,9 +9,12 @@ import * as Stories from './Command.stories'
 
 #### Fast, composable, unstyled command menu for React.
 
-<a href="https://cmdk.paco.me/" target="_blank">
-  API Reference
-</a>
+<Button
+  variant="accent"
+  onClick={() => window.open('https://cmdk.paco.me/', '_blank')}
+>
+  {'API Reference'}
+</Button>
 
 <Source
   dark
@@ -23,7 +27,8 @@ import {
   CommandInput,
   CommandItem,
   CommandList,
-  CommandSeparator, } from '@0xintuition/1ui'
+  CommandSeparator, 
+} from '@0xintuition/1ui'
 
 <Command>
   <CommandInput placeholder="Type a command or search..." />
