ENG-0000 fix(portal): fix mdx error (#696)
## Affected Packages

Apps

- [x] portal

Packages

- [ ] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

- Fixes the MDX error by wrapping [] in `[]`
- Also fixes the narrative image in a couple of places

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/apps/portal/app/routes/app+/quest+/content/89ef2072-2428-4695-994e-3c83c3f7f3be-main.mdx
+++ b/apps/portal/app/routes/app+/quest+/content/89ef2072-2428-4695-994e-3c83c3f7f3be-main.mdx
@@ -9,7 +9,7 @@ As you’ve now learned, each Triple (again, oftentimes referred to as a ‘Clai
 
 In this exercise, you will stake on the 'negative' Vault of a Triple/Claim, indicating that you believe the statement described by the Triple/Claim to be false.
 
-For instance, staking on the 'negative' Vault of the Triple/Claim [Vitalik] [founderOf] [Ethereum] signifies that you disagree with the statement that Vitalik is the founder of Ethereum.
+For instance, staking on the 'negative' Vault of the Triple/Claim `[Vitalik] [founderOf] [Ethereum]` signifies that you disagree with the statement that Vitalik is the founder of Ethereum.
 
 This mechanism tightly integrates sentiment with the statement, eliminating the need for separate statements to express agreement or disagreement.
 
