--- a/apps/portal/app/routes/app+/quest+/content/ac22e180-9923-4481-9cba-31e88f223e58-main.mdx
+++ b/apps/portal/app/routes/app+/quest+/content/ac22e180-9923-4481-9cba-31e88f223e58-main.mdx
@@ -13,7 +13,7 @@ By decoupling of statements from the expression of those statements, Intuition e
 
 Each Triple/Claim in Intuition has two associated ERC-4626-esque Vaults—one for the 'positive' (true) side of the Triple/Claim, and one for the 'negative' (false) side. Staking ETH in the 'positive' Vault would signify that you believe the statement represented by the Claim to be true, while staking ETH in the 'negative' Vault would indicate that you believe the statement to be false. To draw a parallel, you may think of this as a non-resolving prediction market.
 
-For example, consider the statement [Vitalik] [founderOf] [Ethereum]. This statement can exist without any active endorsement. To express agreement with this statement, you would deposit ETH into the respective positive Vault of the Claim, thereby expressing that you believe [Vitalik] [founderOf] [Ethereum] to be a true statement.
+For example, consider the statement `[Vitalik] [founderOf] [Ethereum]`. This statement can exist without any active endorsement. To express agreement with this statement, you would deposit ETH into the respective positive Vault of the Claim, thereby expressing that you believe `[Vitalik] [founderOf] [Ethereum]` to be a true statement.
 
 This creates a TCR for data structures, helping to solve the problem of folksonomies, where users oftentimes use similar but different ways to describe the same thing. In this model, data fragmentation issues are resolved through incentive-driven social consensus rather than through top-down hierarchically imposed taxonomies.
 
