--- a/apps/portal/app/routes/app+/quest+/content/ac22e180-9923-4481-9cba-31e88f223e58-main-2.mdx
+++ b/apps/portal/app/routes/app+/quest+/content/ac22e180-9923-4481-9cba-31e88f223e58-main-2.mdx
@@ -7,4 +7,4 @@ summary: 'Express agreement or disagreement while shaping community wisdom.'
 
 When you stake on a Triple, a portion of your deposit is automatically allocated to the Triple’s underlying Atoms, since your interaction with the Triple indicates your belief that these constituent Atoms are relevant to the system.
 
-For example, if you stake on the Claim, [Vitalik] [founderOf] [Ethereum], you will also be staking on the Atoms [Vitalik], [founderOf], and [Ethereum]. This process enhances Intuition’s TCR (Token Curated Registry) by indicating which Atoms are most frequently utilized across the Intuition system.
+For example, if you stake on the Claim, `[Vitalik] [founderOf] [Ethereum]`, you will also be staking on the Atoms `[Vitalik], [founderOf], and [Ethereum]`. This process enhances Intuition’s TCR (Token Curated Registry) by indicating which Atoms are most frequently utilized across the Intuition system.
