--- a/apps/portal/app/routes/app+/quest+/content/dacdd63d-f978-433e-aeb0-54d165e8f936-main.mdx
+++ b/apps/portal/app/routes/app+/quest+/content/dacdd63d-f978-433e-aeb0-54d165e8f936-main.mdx
@@ -11,7 +11,7 @@ With discrete identities for all things in the form of Atoms, we can now compose
 
 To do this, in Intuition, all connections between Atoms are represented in Semantic/RDF Triple format. Triples, also oftentimes referred to as ‘Claims’, consist of three elements: a Subject, Predicate, and Object - very much akin to a sentence in natural language - with each element represented as an Atom.
 
-For example, a triple may be something such as [Vitalik] [founderOf] [Ethereum], wherein [Vitalik], [founderOf], and [Ethereum] are all Atoms.
+For example, a triple may be something such as `[Vitalik] [founderOf] [Ethereum]`, wherein `[Vitalik]`, `[founderOf]`, and `[Ethereum]` are all Atoms.
 
 The Subject-Predicate-Object format allows for the clear and explicit definition and interpretation of relationships between Atoms/Identities, making the data highly reconcilable, machine-readable, and usable. These connections can be visualized as a graph, resembling a network with nodes and edges, where each node and edge is an Atom.
 
