ENG-4383 feat(portal,1ui): claim & identity cards/rows (#884)
## Affected Packages

Apps

- [ ] data populator
- [x] portal
- [ ] template

Packages

- [x] 1ui
- [ ] api
- [ ] graphql
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

- Adds StakeButton, StakeTVL to 1ui.
- Updates IdentityRow and ClaimRow 1ui components and removes the
versions that were in Portal.
- Updates ActivityItem component to use the new IdentityRow and
ClaimRow.
- Implements inline staking, uses data from API (claim/identity) on
initial load and then runs a fetcher to get updated data from RPC.
- Had to update various other components in 1ui to account for the
changes to some of the components related to this update.

Note: During this, I noticed that a bunch of terminology/nomenclature
used in 1ui is confusing or could be better. Once this is in I will
rebase my 1ui re-org branch and probably make a few changes to improve
this. i.e. 'numPositions' was labeled 'numFollowers'. There were a lot
of cases where we could improve some of this. I think it was just a lack
of understanding when some of these components were built out in 1ui.
Could also leverage types better as well in some places. I'm assuming
the types were added after some of these were built.

## Screen Captures


https://www.loom.com/share/8a9cb65d178848aaa12048d26d816d1b?sid=e689d1e4-1ab3-4e97-8a6b-26580b1c3fa4

https://www.loom.com/share/59978a9b08bf4a41b62ec577260efec9?sid=f2aaf1ae-3bc2-4256-9c27-1d84f94238bf

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/packages/1ui/src/components/ClaimRow/ClaimRow.mdx
+++ b/packages/1ui/src/components/ClaimRow/ClaimRow.mdx
@@ -6,23 +6,25 @@ import * as Stories from './ClaimRow.stories'
 
 <Title />
 
-#### A representation of claim details.
+#### Displays a claim with TVL and stake actions.
 
 <Source
   dark
   language="tsx"
   code={`
-import { ClaimRow, Claim } from '@0xintuition/1ui'
+import { ClaimRow } from '@0xintuition/1ui'
 
-<ClaimRow claimsFor={736} claimsAgainst={234} amount={0.383}>
+<ClaimRow
+  numPositionsFor={69}
+  numPositionsAgainst={42}
+  totalTVL={420.69}
+  tvlFor={240.69}
+  currency="ETH"
+>
   <Claim
-    size="sm"
-    subject={{
-      variant: 'default',
-      label: '0xintuition',
-    }}
-    predicate={{ label: 'is really' }}
-    object={{ label: 'cool' }}
+    subject={{ variant: 'non-user', label: '0xintuition' }}
+    predicate={{ variant: 'non-user', label: 'is really' }}
+    object={{ variant: 'non-user', label: 'cool' }}
   />
 </ClaimRow>
 `} />
@@ -32,3 +34,31 @@ import { ClaimRow, Claim } from '@0xintuition/1ui'
 ## Properties
 
 <Controls />
+
+## Variants
+
+### With User Position
+
+<Source
+  dark
+  language="tsx"
+  code={`
+<ClaimRow
+  numPositionsFor={69}
+  numPositionsAgainst={42}
+  totalTVL={420.69}
+  tvlFor={240.69}
+  currency="ETH"
+  userPosition={3.19}
+  positionDirection="claimFor"
+>
+  <Claim
+    subject={{ variant: 'non-user', label: '0xintuition' }}
+    predicate={{ variant: 'non-user', label: 'is really' }}
+    object={{ variant: 'non-user', label: 'cool' }}
+  />
+</ClaimRow>
+`}
+/>
+
+<Canvas of={Stories.WithUserPosition} sourceState="none" />
