--- a/packages/1ui/src/components/ListGrid/ListGrid.mdx
+++ b/packages/1ui/src/components/ListGrid/ListGrid.mdx
@@ -6,7 +6,7 @@ import * as Stories from './ListGrid.stories'
 
 <Title />
 
-#### A grid layout to display a list of identities or other data
+#### A grid layout component with profile and explore variants for displaying list cards
 
 <Source
   dark
@@ -14,83 +14,30 @@ import * as Stories from './ListGrid.stories'
   code={`
 import { ListGrid } from '@0xintuition/1ui'
 
-const simpleIdentities = [
-{
-displayName: 'Best Crypto Portfolio Trackers',
-imgSrc: 'https://avatars.githubusercontent.com/u/94311139?s=200&v=4',
-identitiesCount: 45,
-savedAmount: '0.047',
-onSaveClick: () => alert('Best Crypto Portfolio Trackers saved!'),
-isSaved: true,
-},
-{
-displayName: 'Top Decentralized Finance Platforms',
-imgSrc: 'https://avatars.githubusercontent.com/u/94311139?s=200&v=4',
-identitiesCount: 45,
-savedAmount: '0.047',
-onSaveClick: () => alert('Top Decentralized Finance Platforms saved!'),
-isSaved: false,
-},
-// Add more identities as needed
-];
+const MyListGrid = () => (
 
-<ListGrid identities={simpleIdentities} className="my-custom-class" />
-`} />
+{' '}
+
+<ListGrid variant="explore">
+  <ListCard
+    displayName="Best Crypto Portfolio Trackers"
+    imgSrc="https://example.com/image.jpg"
+    identitiesCount={45}
+    buttonWrapper={(button) => (
+      <Link to="/lists/portfolio-trackers">{button}</Link>
+    )}
+  />
+  <ListCard
+    displayName="Top DeFi Platforms"
+    imgSrc="https://example.com/image.jpg"
+    identitiesCount={32}
+    buttonWrapper={(button) => <Link to="/lists/defi-platforms">{button}</Link>}
+  />
+</ListGrid>
+) `} />
 
 <Canvas of={Stories.BasicUsage} sourceState="none" />
 
 ## Properties
 
 <Controls />
-
-### Children Variant
-
-<Source
-  dark
-  language="tsx"
-  code={`
-import { ListGrid } from '@0xintuition/1ui'
-
-const customChildren = [
-
-{' '}
-
-<div
-  key="1"
-  className="theme-border flex flex-col items-center rounded-xl p-8"
-  style={{ height: '18rem' }}
->
-  <img
-    src="https://avatars.githubusercontent.com/u/94311139?s=200&v=4"
-    alt="Best Crypto Portfolio Trackers"
-    className="mb-4 h-16 w-16"
-  />
-  <div className="text-center">
-    <h2 className="mb-2 text-xl font-bold">Best Crypto Portfolio Trackers</h2>
-    <p className="text-secondary/50 mb-2">45 identities</p>
-    <button className="mt-4 w-full">Saved: 0.047 ETH</button>
-  </div>
-</div>
-,
-<div
-  key="2"
-  className="theme-border flex flex-col items-center rounded-xl p-8"
-  style={{ height: '18rem' }}
->
-  <img
-    src="https://avatars.githubusercontent.com/u/94311139?s=200&v=4"
-    alt="Decentralized Finance Platforms"
-    className="mb-4 h-16 w-16"
-  />
-  <div className="text-center">
-    <h2 className="mb-2 text-xl font-bold">Decentralized Finance Platforms</h2>
-    <p className="text-secondary/50 mb-2">45 identities</p>
-    <button className="mt-4 w-full">Saved: 0.047 ETH</button>
-  </div>
-</div>
-, // Add more children as needed ];
-
-<ListGrid className="my-custom-class">{customChildren}</ListGrid>
-`} />
-
-<Canvas of={Stories.UsageWithChildren} sourceState="none" />
